# devops

./: Cargo.toml  README.md
src/: k8s.rs  kubeclean.rs  kubernetes.rs  main.rs
src/kubernetes/: clean.rs
