[package]
name = "kubeclean"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4"
colog = "1.3.0"
